style(css): hide scrollbar and adjust header margins for improved layout remove fixed header position (now that there is mainly no scroll it does not make much sense to have it fixed)

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
    box-sizing: border-box;
 }
 
+html {
+   scrollbar-width: none;
+}
+
 body {
    font-family: var(--font-main);
    background-color: var(--background);
@@ -37,15 +41,15 @@ body {
    min-height: 80vh;
 }
 
-main {
+/* main {
    margin-top: 100px;
-}
+} */
 
 /* Header & Navigation */
 .header {
-   position: fixed;
-   margin-top: -84px;
-   margin-left: 0.5em;
+   /* position: fixed; */
+   /* margin-top: -84px; */
+   margin: 1em auto;
    width: calc(100% - 1.5em);
    background-color: var(--surface);
    padding: 0.5em;
@@ -588,6 +592,7 @@ main {
    font-size: 0.75rem;
    letter-spacing: 0.75px;
    white-space: nowrap;
+   background-color: #5b5b5b45;
 }
 
 .cocktail-description {
